2000-04-13  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 18.
	(gnus-extended-version): Use `gnus-product-name' and
	`gnus-version-number' instead of the use of `product-string'.
	(gnus-version-number): Exclude `gnus-revision-number'.
	(Defining product): Include `gnus-revision-number'.
	(TopLevel): Require `poe' for the function `butlast'.

2000-04-13  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* lisp/gnus-spec.el (gnus-update-format): Fix a bug in last
	modification.
	(gnus-search-or-regist-spec): Change interface.

2000-04-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-prev-page): Bind
	`window-pixel-scroll-increment' to nil while scrolling for
	canceling a backlash and a modeline erosion.  It may work under
	XEmacs 21.2.20 and later.
	(gnus-article-next-page): Ditto.

2000-04-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 17.

	* lisp/gnus-spec.el (gnus-format-specs-compiled): Fix doc string.

2000-04-11  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* lisp/gnus-start.el (gnus-product-variable-touch): Support multiple
	arguments.

	* lisp/gnus-spec.el (gnus-search-or-regist-spec): New utility macro.
	(gnus-update-format-specifications): Support new data structure of
	`gnus-format-specs-compiled'.
	(gnus-update-format-specification-1): Likewise.
	(gnus-update-format): Support new data structure of
	`gnus-format-specs'.
	(gnus-format-specs): Modify data structure.

2000-04-10   Daiki Ueno  <ueno@unixuser.org>

	* lisp/imap.el (imap-body-lines): Check Content-Type: of the
	article case insensitively.

2000-04-07  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-cite-original): Use "unknown sender" if
	from field does not exist in the yanked article.

2000-04-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-cite-original): Extract from field for
	the simple citation line.

2000-03-21  Katsumi Yamaoka <yamaoka@jpl.org>
